@@ -18,8 +18,6 @@
 #undef UNICODE
 #undef _UNICODE
 
-#define WINVER        0x0500   /* Requires Windows 2K definitions */
-#define _WIN32_WINNT  0x0500
 #include "tkWinInt.h"
 #include "tkFileFilter.h"
 #include "tkFont.h"
