@@ -19,14 +19,6 @@
 #undef UNICODE
 #undef _UNICODE
 
-/*
- * Make sure the SendInput API is available (NT SP 3):
- */
-#if (_WIN32_WINNT <= 0x0400)
-#undef _WIN32_WINNT
-#define _WIN32_WINNT 0x0403
-#endif
-
 #include "tkWinInt.h"
 
 /*
